fix: fix bug on mobile version

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,6 @@ body {
 
 @layer components {
   .active {
-    @apply from-purple-500 to-pink-500 after:absolute after:-bottom-2 after:left-1/2 after:h-1 after:w-9/12 after:-translate-x-1/2 after:rounded after:bg-gradient-to-r after:content-[''];
+    @apply from-purple-500 to-pink-500 after:absolute after:bottom-0 after:left-3 after:h-1 after:w-1/4 after:rounded after:bg-gradient-to-r after:content-[''] md:after:-bottom-2 md:after:left-1/2 md:after:w-9/12 md:after:-translate-x-1/2;
   }
 }
